--- a/index.html
+++ b/index.html
@@ -6,59 +6,7 @@
   <title>Political Alignment Quiz</title>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
-  <style>
-    body {
-      background-color: #f8f9fa;
-      color: #333;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      padding: 20px;
-    }
-    .card {
-      border-color: #ccc;
-    }
-    .card-header {
-      background-color: #e9ecef;
-      border-bottom: 1px solid #ccc;
-      color: #333;
-    }
-    .card-body {
-      background-color: #fff;
-    }
-    .btn {
-      color: #333;
-      border-color: #ccc;
-    }
-    .btn-primary {
-      background-color: #666;
-      border-color: #666;
-    }
-    .btn-outline-primary {
-      color: #666;
-      border-color: #666;
-    }
-    .btn-secondary {
-      background-color: #999;
-      border-color: #999;
-    }
-    .progress {
-      background-color: #e9ecef;
-    }
-    .progress-bar {
-      background-color: #666;
-    }
-    .form-label {
-      color: #333;
-    }
-    .question-card {
-      margin-top: 20px;
-    }
-    .text-muted {
-      color: #666;
-    }
-  </style>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div id="app" class="container">
@@ -139,6 +87,6 @@
       </div>
     </div>
   </div>
-  <script src="app.js?v98999"></script>
+  <script src="app.js?v=1a738cb66bfd45e99b983052df4da154xxxxxbbb"></script>
 </body>
 </html>
