Added question tooling

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="card-body">
           <div v-for="choice in currentQuestion.choices" :key="choice.id">
             <button class="btn btn-block" 
+                    style="margin-bottom:.05in"
                     :class="{'btn-primary': getCurrentAnswer() === choice.id, 'btn-outline-primary': getCurrentAnswer() !== choice.id}" 
                     @click="handleAnswer(choice.id)">
               {{ choice.value }}
@@ -92,6 +93,6 @@
       </div>
     </div>
   </div>
-  <script src="app.js?v=8b754e63c67d4dd8b79f1620b7eb1a23"></script>
+  <script src="app.js?v=8b754e63c67d4dd8b79f1620b7eb1a245"></script>
 </body>
 </html>
